@@ -1,5 +1,11 @@
 == Version 2.5.9 Work in progress (not released -- this is a draft) ==
 
+  Users side :
+  ------------
+    # Apps :
+        * Tickets :
+            - In list-view, the background color for important tickets was broken.
+
 
 == Version 2.5.8 ==
 
